<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/action_bar_color"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/r2s_logo"
        android:layout_margin="10dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_tile"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:padding="30dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edt_email"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_username"
        android:visibility="invisible"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"

        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:privateImeOptions="nm"
        android:id="@+id/edt_password"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_pass"
        android:visibility="invisible"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:entries="@array/array_role"
        android:drawSelectorOnTop="true"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/cb_remember_me"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:background="@drawable/item_format"
             />



</LinearLayout>